[package]
name = "transport-nym"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
async-trait = "0.1"
nym-sdk = "1.21.2"
tokio = { version = "1.52.3", features = ["time"] }
transport-core = { path = "../transport-core" }

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(coverage_nightly)'] }
